--- a/EBE-Node/osc2u/GNUmakefile
+++ b/EBE-Node/osc2u/GNUmakefile
@@ -15,7 +15,7 @@
 # ----------------------------------------- 
 
 
-FC := gfortran
+FC := ifort
 FFLAGS= $(shell ../crank/configure_compiler_fortran_Flags.sh)
 
 RM		=	rm -f
