--- a/EBE-Node/HoTCoffeeh/GNUmakefile
+++ b/EBE-Node/HoTCoffeeh/GNUmakefile
@@ -3,9 +3,9 @@ all	: svwr.e cfwr.e
 svwr.e  :
 		(cd svwr; make -f GNUmakefile_svwr distclean; make -f GNUmakefile_svwr install)
 cfwr.e	:
-		(cd cfwr; make -f GNUmakefile_cfwr distclean; make -f GNUmakefile_cfwr install)
+		(cd cfwr; make -f GNUmakefile && make -f GNUmakefile install)
 
 distclean	:
 	(cd svwr; make -f GNUmakefile_svwr distclean)
-	(cd cfwr; make -f GNUmakefile_cfwr distclean)
+	(cd cfwr; make -f GNUmakefile distclean)
 	rm *.e
